fix: spacing of bottom bar of course cards

--- a/main.css
+++ b/main.css
@@ -127,7 +127,7 @@
     border: none;
   }
   .course-org-list {
-    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr)) !important;
+    grid-template-columns: repeat(auto-fill, minmax(13rem, 1fr)) !important;
     gap: 1rem !important;
   }
   .course-org-list hr {
@@ -174,6 +174,20 @@
   .course-org-list .course-element-card .summary .course-status {
     display: none !important;
   }
+  .course-org-list .course-element-card .summary .status-bar {
+    padding: 0 !important;
+  }
+  .course-org-list .course-element-card .summary .controls {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 0.1rem;
+  }
+  .course-org-list .course-element-card .summary .controls > * {
+    margin: 0 !important;
+    flex: 1;
+  }
   .multi-column-view .course-org-list .course-element-card {
     transform: none !important;
     transition-duration: 0.1s !important;
@@ -183,6 +197,7 @@
   }
   .multi-column-view .course-org-list .course-element-card .summary {
     grid-template-rows: auto !important;
+    grid-template-columns: 1fr auto !important;
   }
   .multi-column-view .course-org-list .course-element-card::before {
     all: unset;
